# coto

./: Cargo.toml  README.md
.github/workflows/: build.yml  lint-format.yml  release.yml
scripts/: install.sh
src/: config.rs  main.rs
src/commands/: config.rs  gen.rs  mod.rs  setup.rs
